--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -61,3 +61,11 @@
     border: 2px solid #2196f3;
     background-color: white;
 }
+
+.viewer{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    padding: 50px
+}
