--- a/src/components/cardView/cardView.css
+++ b/src/components/cardView/cardView.css
@@ -7,6 +7,7 @@
 
     margin:10px;
     background: white;
+    text-decoration: none;
 
     border: 2px #999999 solid;
     border-radius: 5px; 
@@ -40,6 +41,7 @@
 }
 
 .texts-container h5{
+    color: black;
     padding: 0;
     margin: 0;
 }
