--- a/src/components/category/category.css
+++ b/src/components/category/category.css
@@ -1,6 +1,6 @@
 .image-container{
     width: 100%;
-    min-height: 300px;
+    min-height: 250px;
 
     font-family: 'Playfair Display', serif;
     color: white;
@@ -8,6 +8,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.image-container img{
+    min-width: 100%;
+    max-width: 100%;
+
+    min-height: 100%;
+    max-height: 100%;
+
+    width: auto;
+    height: auto;
 }
 
 .image-container p{
@@ -32,6 +43,32 @@
     color: #999999;
     font-weight: 600;
     margin: 0;
+}
+
+.itemsShow{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.itemsShow p{
+    margin: 0;
+    display: block;
+    margin-right: 10px;
+}
+
+.itemsShow__number{
+    font-size: 50px;
+    color: #FFC107;
+    font-weight: 600; 
+}
+
+.itemsShow__text{
+    color: #999999;
+    font-weight: 600;
 }
 
 .buttons{
